# aimrt_tankfight

./: CMakeLists.txt  README.md  build.sh
include/: Constants.h  Tank.h
src/: Tank.cpp  main.cpp
